[package]
authors = ["Carl Johan Gustavsson <carl.johan@tictail.com>"]
name = "serve_csv"
version = "0.1.0"

[dependencies]
byteorder = "1.0.0"
csv = "0.15.0"
rocket = "0.2.2"
rocket_codegen = "0.2.2"
rocket_contrib = "0.2.2"
serde = "0.9.11"
serde_derive = "0.9.11"
serde_json = "0.9.9"
time = "0.1.36"
